--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,16 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div id="conJsx"></div>
+      <div id="conReact"></div>
+      <div id="conJs"></div>
+
+      <div id="conFuncJsx"></div>
+      <div id="conFuncReact"></div>
+      <div id="conFuncJs"></div>
+      <div id="conFibers"></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
